# pycommit-ai

./: .gitignore  README.md  bump_version.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  publish.yml
src/pycommit_ai/: __init__.py  cli.py  config.py  core.py  errors.py  git.py  prompt.py  utils.py
src/pycommit_ai/services/: __init__.py  base.py  gemini.py  groq.py  openai_service.py  openrouter.py
tests/: test_config.py  test_prompt.py  test_services.py
